fixed stickybar but is still somewhat jumpy

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 }
 
 
-nav ul {
+ul {
     padding: 0px;
     margin: 0px;
     list-style-type: none;
@@ -41,11 +41,11 @@ nav ul {
   
   
   
-  nav li {
+  li {
     float: left;
   }
   
-  nav li a {
+  li a {
     display: block;
     color: white;
     text-align: center;
@@ -54,7 +54,7 @@ nav ul {
   }
   
   /* Change the link color to #111 (black) on hover */
-  nav li a:hover {
+  li a:hover {
     background-color: #111;
   }
 
